--- a/static/client.html
+++ b/static/client.html
@@ -10,8 +10,8 @@
     <body>
       <div class="spacer" id="left">
         <div class="spacer">
-            <button id="private">PRIVATE</button>
-            <button id="public">MULTIPLAYER</button>
+            <button id="private">GO PRIVATE</button>
+            <button id="public">GO MULTIPLAYER</button>
             <div id="b0"></div>
         </div>
         <div id="a0"></div>
