--- a/static/client.html
+++ b/static/client.html
@@ -5,10 +5,16 @@
         <script type="text/JavaScript" src="jquery-1.11.2.min.js"></script>
         <script type="text/JavaScript" src="jquery-ui-1.11.2.custom/jquery-ui.js"></script>
         <script type="text/JavaScript" src="client.js"></script>
+        <script type="text/javascript" src="rx/rx.all.js"></script>
+        <script type="text/javascript" src="rx/time.js"></script>
         <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
         <link rel="stylesheet" type="text/css" href="screen.css"></script>
     </head>
     <body>
+      <div id="go30"></div>
+      <div id="go60"></div>
+      <div id="stop30"></div>
+      <div id="stop60"><h1>stop60</div>
       <div class="spacer" id="left">
         <div class="spacer">
             <button id="private">GO PRIVATE</button>
@@ -17,6 +23,7 @@
         </div>
         <div id="a0"></div>
         <div id="a2"></div>
+        <div id="countdown"></div> 
         <div id="a4"></div>
         <div id="a3">
             <button id="rollA", type="submit" >ROLL</button>
@@ -34,7 +41,7 @@
             <button id="solutions" type="submit">SOLUTIONS</button>
             <button class="erase">ERASE</button>
             <div id="show"></div>
-            
+
         </div>
         <div class="spacer">
             <button class="erase">ERASE</button>
