Changed path to Rx.js files.

--- a/static/client.html
+++ b/static/client.html
@@ -5,8 +5,8 @@
         <script type="text/JavaScript" src="jquery-1.11.2.min.js"></script>
         <script type="text/JavaScript" src="jquery-ui-1.11.2.custom/jquery-ui.js"></script>
         <script type="text/JavaScript" src="client.js"></script>
-        <script type="text/javascript" src="rx/rx.all.js"></script>
-        <script type="text/javascript" src="rx/time.js"></script>
+        <script type="text/javascript" src="rx.all.js"></script>
+        <script type="text/javascript" src="rx.time.js"></script>
         <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
         <link rel="stylesheet" type="text/css" href="screen.css"></script>
     </head>
