--- a/static/client.html
+++ b/static/client.html
@@ -2,19 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <script type="text/JavaScript" src="jquery-1.11.2.min.js"></script>
-        <script type="text/JavaScript" src="jquery-ui-1.11.2.custom/jquery-ui.js"></script>
+        <script src="scripts/jquery.js"></script>
+        <script src="scripts/jquery-ui.js"></script>
         <script type="text/JavaScript" src="client.js"></script>
-        <script type="text/javascript" src="rx.all.js"></script>
-        <script type="text/javascript" src="rx.time.js"></script>
-        <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
+        <script src="scripts/rx.all.js"></script>
+        <script src="scripts/rx.time.js"></script>
+        <script src="scripts/socket.js"></script>
         <link rel="stylesheet" type="text/css" href="screen.css"></script>
     </head>
     <body>
-      <div id="go30"></div>
-      <div id="go60"></div>
-      <div id="stop30"></div>
-      <div id="stop60"><h1>stop60</div>
       <div class="spacer" id="left">
         <div class="spacer">
             <button id="private">GO PRIVATE</button>
@@ -97,5 +93,9 @@
             <button class="erase2">ERASE</button>
         </div>
       </div>
+      <div id="go30"></div>
+      <div id="go60"></div>
+      <div id="stop30"></div>
+      <div id="stop60"><h1>stop60</div>
     </body>
 </html>
