Revised the order of loading scripts.

--- a/static/client.html
+++ b/static/client.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <script src="scripts/jquery.js"></script>
         <script src="scripts/jquery-ui.js"></script>
-        <script type="text/JavaScript" src="client.js"></script>
+        <script type="texit/JavaScript" src="client.js"></script>
         <script src="scripts/rx.all.js"></script>
         <script src="scripts/rx.time.js"></script>
         <script src="scripts/socket.js"></script>
