--- a/static/client.html
+++ b/static/client.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <script src="scripts/jquery.js"></script>
-        <script src="scripts/jquery-ui.js"></script>
-        <script type="texit/JavaScript" src="client.js"></script>
+        <script src="scripts/jquery-ui.js"></script> 
         <script src="scripts/rx.all.js"></script>
         <script src="scripts/rx.time.js"></script>
-        <script src="scripts/socket.js"></script>
+        <script src="scripts/socket.io.js"></script>
+        <script type="text/JavaScript" src="client.js"></script> 
         <link rel="stylesheet" type="text/css" href="screen.css"></script>
     </head>
     <body>
@@ -20,7 +20,7 @@
         <div id="a0"></div>
         <div id="a2"></div>
         <div id="countdown"></div> 
-        <div id="a4"></div>
+        <div id="a4"></divi>
         <div id="a3">
             <button id="rollA", type="submit" >ROLL</button>
             <button type="submit" id="newDisplay" >REFRESH</button>
@@ -44,8 +44,6 @@
         </div>
       </div>
       <div class="spacer" id="right"><h1><span></span></h1>
-
-
         <div id="main">
             <div id="warnings">
             </div>
