--- a/index.html
+++ b/index.html
@@ -1,51 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Score2 by dschalk</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <a id="forkme_banner" href="https://github.com/dschalk/score2">View on GitHub</a>
-    <div class="shell">
-
+    <div class="wrapper">
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Score2</h1>
-            <h2>Haskell websockets up and running.</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1>Score2</h1>
+        <p>Haskell websockets up and running.</p>
+
+        <p class="view"><a href="https://github.com/dschalk/score2">View the Project on GitHub <small>dschalk/score2</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/dschalk/score2/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/dschalk/score2/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/dschalk/score2">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/dschalk/score2/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/dschalk/score2/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+      <section>
         <p><strong>Rules of "Score"</strong></p>
 
 <p>Four dice are rolled. The default die are two six-sided, one twelve-sided, and one twenty-sided die. The goal is to make the number "20" in two or three steps using addition, subtraction, multiplication, division, and/or concatenation.</p>
@@ -186,21 +168,12 @@ upScore name = <span class="pl-s3">map</span> (incFunc name)</pre></div>
 
 <p>There are two modes of play in #Score#: group play and individual play. When one group player rolls the dice, all group players see the roll, but individual players do not. When an individual player rolls the dice, no other player sees it. "player \=\== sender" lets individual players in, along with one group player but that is of no consequence since the next test covers all group players. "a@F$Uy&amp;private" is the default value for new players. It signifies that they are in individual play mode. If a player clicks "GO MULTIPLAYER", the value of privateClicker becomes the player's login name. So "privateClicker !== 'a@F$Uy&amp;private'" means the player has gone public. "sender !== 'a@F$Uy&amp;private'" means a group player sent the message. All group players should receive all messages sent by other group players, and the second test makes sure this happens.</p>
       </section>
-
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/dschalk">dschalk</a> can be found on <a href="https://github.com/dschalk/score2">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p>This project is maintained by <a href="https://github.com/dschalk">dschalk</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
-
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
