--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p><strong>Rules of "Score"</strong></p>
+        <h2>
+<a id="the-game-of-score" class="anchor" href="#the-game-of-score" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Game of Score</h2>
+
+<h4>
+<a id="an-extension-of-jaspervdjwebsockets-as-implemented-by-yesodwebwaiwai-websockets" class="anchor" href="#an-extension-of-jaspervdjwebsockets-as-implemented-by-yesodwebwaiwai-websockets" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>An extension of jaspervdj/websockets as implemented by yesodweb/wai/wai-websockets</em>
+</h4>
+
+<p><strong>Rules of "Score"</strong></p>
 
 <p>Four dice are rolled. The default die are two six-sided, one twelve-sided, and one twenty-sided die. The goal is to make the number "20" in two or three steps using addition, subtraction, multiplication, division, and/or concatenation.</p>
 
