Removed some troubleshooting HTML code.

--- a/static/client.html
+++ b/static/client.html
@@ -96,6 +96,6 @@
       <div id="go30"></div>
       <div id="go60"></div>
       <div id="stop30"></div>
-      <div id="stop60"><h1>stop60</div>
+      <div id="stop60"></div>
     </body>
 </html>
