--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <span class="pl-en">console</span><span class="pl-s3">.log</span>(<span class="pl-s1"><span class="pl-pds">"</span>What?<span class="pl-pds">"</span></span>);
                 $(<span class="pl-s1"><span class="pl-pds">'</span>#warnings<span class="pl-pds">'</span></span>).append(<span class="pl-s3">event</span>.<span class="pl-sc">data</span>);
                 ws.<span class="pl-s3">close</span>();
+                <span class="pl-k">delete</span> $(<span class="pl-s1"><span class="pl-pds">'</span>#join-form<span class="pl-pds">'</span></span>);
             }
         };
 
@@ -144,7 +145,7 @@
     $(<span class="pl-s1"><span class="pl-pds">'</span>#join-form<span class="pl-pds">'</span></span>).destroy();
 });</pre></div>
 
-<p>After it initiates the player interface, 'ws.onmessage = onMessage' de-references the anonymous function and re-assignes the variable 'ws.onmessage' to onMessage. The entire 'join-form' section becomes eligible for garbage collection after the final line,' $('#join-form').destroy();'.</p>
+<p>After it initiates the player interface, 'ws.onmessage = onMessage' de-references the anonymous function and re-assignes the variable 'ws.onmessage' to onMessage. The entire 'join-form' section becomes eligible for garbage collection after the final line,' delete $('#join-form');'.</p>
 
 <p>When current players receive "CC#$42" prefixed messages from new sign-ins, they do not make it to the chat message section. They hit a dead end in the 'onMessage' section pursuant to the following 'do nothing' code:</p>
 
