Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 <a id="an-extension-of-githubcomjaspervdjwebsockets-as-implemented-by-yesodwebwaiwai-websockets" class="anchor" href="#an-extension-of-githubcomjaspervdjwebsockets-as-implemented-by-yesodwebwaiwai-websockets" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>An extension of github.com/jaspervdj/websockets as implemented by yesodweb/wai/wai-websockets</em>
 </h4>
 
+<h4>
+<a id="__david-schalk" class="anchor" href="#__david-schalk" aria-hidden="true"><span class="octicon octicon-link"></span></a>__David Schalk</h4>
+
 <h3>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h3>
 
