Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h4>
 <a id="rules-of-score" class="anchor" href="#rules-of-score" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rules of "Score"</h4>
 
-<p>Four dice are rolled. The default die are two six-sided, one twelve-sided, and one twenty-sided die. As mentioned above, the goal is to make the number "20" in two or three steps using addition, subtraction, multiplication, division, and/or concatenation.</p>
+<p>Four dice are rolled. The default die are two six-sided, one twelve-sided, and one twenty-sided die. The goal is to make the number "20" in two or three steps using addition, subtraction, multiplication, division, and/or concatenation.</p>
 
 <p>If a player calls out "Score!", or clicks "SCORE" in the computer version, he or she must quickly demonstrate how to make the number "20". Failure to do so loses the player one point; success gains a point. Clicking "SCORE" starts a countdown which currently allows 30 seconds, which is more than enough time.</p>
 
