Added a link to the rules and the code analysis.

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,9 @@
     </head>
     <body>
       <div class="spacer" id="left">
-      
+        <div class="spacer" id="readme">
+            <a href="http://dschalk.github.io/score2/">Rules and game code analysis</a>
+        </div>
         <div class="spacer">
             <button id="private">Private Play</button>
             <button id="publicA">Group A</button>
@@ -51,8 +53,6 @@
         </div>
       </div>
       <div class="spacer" id="right"><h1><span></span></h1>
-
-
         <div id="main">
             <div id="warnings">
             </div>
