This version had expanded functionality

--- a/static/index.html
+++ b/static/index.html
@@ -50,17 +50,22 @@
         <div class="spacer">
             <button class="erase">ERASE</button>
         </div>
+
+
+
+
+
         <div class="spacer">
             <div id="goal" type="submit" class="extra">GOAL</div>
-            <input type="text" id="goal2" class="range" > 
+            <input type="text" id="goal2" class="rad" > 
         </div>
 
         <div>
-            <div id="sides" type="submit" class="extra2">RANGES</div>  
-            <input type="text" id="x20" class="range" >   
-            <input type="text" id="x21" class="range" >    
-            <input type="text" id="x22" class="range" > 
-            <input type="text" id="x23" class="range" > 
+            <div id="sides" type="submit" class="extra">RANGES</div>  
+            <input type="text" id="x20" class="rad" >   
+            <input type="text" id="x21" class="rad" >    
+            <input type="text" id="x22" class="rad" > 
+            <input type="text" id="x23" class="rad" > 
         </div>
 
 
@@ -97,10 +102,10 @@
             </div>
         </div>
         <div class="spacer" id="experiment">       
-            <button id="solutions2" type="submit" >CALCULATE</button>  
+            <button id="solutions2" type="submit" class="extra">CALCULATE</button>  
 
-            <input type="text" id="x30" class="rad"> 
-            <input type="text" id="x31" class="rad"  > 
+            <input type="text" id="x30" class="rad" > 
+            <input type="text" id="x31" class="rad" > 
             <input type="text" id="x32" class="rad" > 
             <input type="text" id="x33" class="rad" > 
 
@@ -114,7 +119,7 @@
         </div>
         <div class="spacer2">
           <div id="goal3" type="submit" class="extra">GOAL</div>
-        <input type="text" id="goal4" class="range" > 
+        <input type="text" id="goal4" class="rad" > 
       </div>
       </div>
       <div id="go30"></div>
