--- a/static/index.html
+++ b/static/index.html
@@ -20,11 +20,8 @@
             <button id="publicA">Group A</button>
             <button id="publicB">Group B</button>
             <button id="publicNew">Player Created</button>
+            <input type="text" id="new">
             <div id="b0"></div>
-            <div id="newgroup">
-                <label for="new">Enter group name: </label>
-                <input type="text" id="new">
-            </div>
         </div>
         <div id="a0"></div>
         <div id="a2"></div>
@@ -102,7 +99,7 @@
             </div>
         </div>
         <div class="spacer" id="experiment">       
-            <button id="solutions2" type="submit" class="extra">CALCULATE</button>  
+            <button id="solutions2" type="submit">CALCULATE</button>  
 
             <input type="text" id="x30" class="rad" > 
             <input type="text" id="x31" class="rad" > 
