--- a/static/index.html
+++ b/static/index.html
@@ -64,16 +64,12 @@
             <input type="text" id="x22" class="rad" > 
             <input type="text" id="x23" class="rad" > 
         </div>
-
-
-
-
-
       </div>
       <div class="spacer" id="right"><h1><span></span></h1>
         <div id="main">
-            <div id="warnings">
-            </div>
+            <button id="expand">EXPAND CHAT WINDOW</button>
+            <button id="contract">SHOW THE GAME</button>
+            <div id="warnings"></div>
             <div id="join-section">
                 <h2>Join</h2>
                 <form id="join-form" action="">
@@ -99,12 +95,12 @@
             </div>
         </div>
         <div class="spacer" id="experiment">       
-            <button id="solutions2" type="submit">CALCULATE</button>  
+            <button id="solutions2" type="submit">CALCULATE</button>  S
 
-            <input type="text" id="x30" class="rad" > 
-            <input type="text" id="x31" class="rad" > 
-            <input type="text" id="x32" class="rad" > 
-            <input type="text" id="x33" class="rad" > 
+            <input type="text" id="x30" class="rad2" > 
+            <input type="text" id="x31" class="rad2" > 
+            <input type="text" id="x32" class="rad2" > 
+            <input type="text" id="x33" class="rad2" > 
 
             <div class="spacer">
                 <button class="erase2">ERASE</button>
