Added some documentation.

--- a/static/index.html
+++ b/static/index.html
@@ -13,9 +13,11 @@
     <body>
       <div class="spacer">
       <button id="showRules" type="submit">RULES AND CODE ANALYSIS</button>
-      <button id="hideRules" type="submit" class="fixed">HIDE RULES</button>
+      <button id="hideRules" type="submit" class="fixed">GAME</button>
       <br><br>
       <button id="top" type="submit" class="fixed2">TOP</button>
+      <button id="algorithm" type="submit" class="fixed3">ALGORITHM</button>
+      <button id="rul" type="submit" class="fixed4">RULES</button>
       </div>
 
         <div id="rules"></div>
