Fixed scroll up feature in documentation.

--- a/static/IMPOSSIBLES.html
+++ b/static/IMPOSSIBLES.html
@@ -17,6 +17,7 @@
     </style>
   </head>
   <body>
+    <a id="topofRules" class="anchor" aria-hidden="true"></a>
     <article class="markdown-body"><p><strong>IMPOSSIBLES</strong></p>
 <p>The essence of the Score calculation algorythm in the module Fm is contained in the &quot;impossibles.hs&quot; file. Fm has much formatting code, which is a distraction when evaluating the algorythm.</p>
 <p>impossibles.hs computes all dice combinations which cannot be made into the number &quot;20&quot; in two or three stages. In 1.5 seconds, it finds all 104 such combinations using a list comprehension on the seven list comprehensions which cover all possible computations. The five operations are defined as follows:</p>
