Dumbed it down. Reinstated global variables.

--- a/static/IMPOSSIBLES.html
+++ b/static/IMPOSSIBLES.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>This shows that there is no solution that only calc2, only calc6, or only calc7 can find. Next, I checkes all combinations of these three:</title>
-    <link rel="stylesheet" type="text/css" href="./Score2_files/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="./Score2_files/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="./Score2_files/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="./styles/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./styles/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./styles/print.css" media="print">
     <style>
       body {
         min-width: 200px;
