Improved group functionality.

--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
             <button id="private">Private Play</button>
             <button id="publicA">Group A</button>
             <button id="publicB">Group B</button>
-            <button id="publicNew">Player Created</button>
+            <button id="newG">Player Created</button>
             <input type="text" id="new">
             <div id="b0"></div>
         </div>
