Added chat functionality.

--- a/static/index.html
+++ b/static/index.html
@@ -91,9 +91,10 @@
                 </div>
                 <br />
                 <form id="message-form" action="">
-                    <input id="text" type="text" size="40" style="background: #B1C771"/>
-                    <input id="send" type="submit" value="Send" style="background: #B1C771"/>
+                    <input id="text" type="text" size="40" class="messages"/>
+                    <input id="send" class="messages" type="submit" value="Send"/>
                 </form>
+                <input id="clear" class="messages" type="submit" value="Clear" >
             </div>
         </div>
         <div class="spacer" id="experiment">
