Added some features.

--- a/static/index.html
+++ b/static/index.html
@@ -98,17 +98,16 @@
             </div>
         </div>
         <div class="spacer" id="experiment">
-            <button id="solutions2" type="submit">CALCULATE</button>  S
+            <button id="solutions2" type="submit">CALCULATE</button>
 
             <input type="text" id="x30" class="rad2" >
             <input type="text" id="x31" class="rad2" >
             <input type="text" id="x32" class="rad2" >
             <input type="text" id="x33" class="rad2" >
-
-            <div class="spacer">
-                <button class="erase2">ERASE</button>
-                <div id="show2"></div>
-            </div>
+            <button class="erase2">ERASE</button>
+            <div id="show4">Currently Active Groups</div>
+            <div id="show3"></div>
+            <div id="show2"></div>
         </div>
         <div class="spacer2">
             <button class="erase2">ERASE</button>
