--- a/static/index.html
+++ b/static/index.html
@@ -89,12 +89,10 @@
                 <h2>Chat</h2>
                 <div id="messages">
                 </div>
-                <br />
-                <form id="message-form" action="">
-                    <input id="text" type="text" size="40" class="messages"/>
-                    <input id="send" class="messages" type="submit" value="Send"/>
-                </form>
-                <input id="clear" class="messages" type="submit" value="Clear" >
+                <br>
+                <input id="text" type="text" size="40" class="messages"/>
+                <button id="sendMessage" class="messages">SEND</button>
+                <button id="clear" class="messages">CLEAR</button>
             </div>
         </div>
         <div class="spacer" id="experiment">
@@ -105,7 +103,7 @@
             <input type="text" id="x32" class="rad2" >
             <input type="text" id="x33" class="rad2" >
             <button class="erase2">ERASE</button>
-            <div id="show4">Currently Active Groups</div>
+            <div id="show4">Currently Active</div>
             <div id="show3"></div>
             <div id="show2"></div>
         </div>
